// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetForm Rendering Tests No data 1`] = `
<div
  className="container"
>
  <form
    className=""
    onSubmit={[Function]}
  >
    <div
      className="d-flex align-items-center mb-3 input-group"
    >
      <label
        className="fs-6 me-3 form-label"
        htmlFor="repInput"
      >
        Reps
      </label>
      <input
        className="form-control"
        id="repInput"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label
        className="fs-6 mx-3 form-label"
        htmlFor="weightInput"
      >
        Weight
      </label>
      <input
        className="form-control"
        id="weightInput"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        className="btn btn-outline-secondary"
        disabled={false}
        type="submit"
      >
        Add Set
      </button>
    </div>
  </form>
</div>
`;

exports[`SetForm Rendering Tests With Data 1`] = `
<div
  className="container"
>
  <form
    className=""
    onSubmit={[Function]}
  >
    <div
      className="d-flex align-items-center mb-3 input-group"
    >
      <label
        className="fs-6 me-3 form-label"
        htmlFor="repInput"
      >
        Reps
      </label>
      <input
        className="form-control"
        id="repInput"
        onChange={[Function]}
        type="text"
        value="20"
      />
      <label
        className="fs-6 mx-3 form-label"
        htmlFor="weightInput"
      >
        Weight
      </label>
      <input
        className="form-control"
        id="weightInput"
        onChange={[Function]}
        type="text"
        value="200"
      />
      <button
        className="btn btn-outline-secondary"
        disabled={false}
        type="submit"
      >
        Add Set
      </button>
    </div>
  </form>
</div>
`;
